# WinBins

./: AGENTS.md  README.md  WinBins.py  pyproject.toml  requirements.txt
docs/: OBFUSCATION_GUIDE.md
tests/: __init__.py  conftest.py  test_additional_tools.py  test_builders.py  test_cli.py  test_config.py  test_core.py  test_git_ops.py  test_logging.py  test_obfuscation.py  test_tools.py
winbins/: __init__.py  cli.py  config.py  core.py  git_ops.py  logging.py
winbins/builders/: __init__.py  base.py  dotnet.py  factory.py  msbuild.py
winbins/obfuscation/: __init__.py  base.py
winbins/tools/: __init__.py  additional_tools.py  base.py  default_tools.py  registry.py
